feat: read turns
